--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ footer{background:#1b5e20;color:#fff;text-align:center;padding:12px}
 </header>
 
 <section class="hero">
-<img src="image1.jpg" alt="Multi purpose paper covers">
+<img src="image1.png" alt="Multi purpose paper covers">
 <div class="hero-text">
 <h2>High Quality Brown Paper Covers</h2>
 <p>Perfect packaging solutions for garments, bakery, snacks and medicines. Custom printing with your brand logo available.</p>
@@ -84,5 +84,6 @@ footer{background:#1b5e20;color:#fff;text-align:center;padding:12px}
 </footer>
 </body>
 </html>
+
 
 
