--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@ footer{background:#1b5e20;color:#fff;text-align:center;padding:12px}
 
 <section class="section banner">
 <h2>Premium Packaging Look</h2>
+<img src="image6.jpg" > 
+<img src="image7.jpg" >       
+<img src="image8.jpg" >      
+<img src="image9.jpg" >       
 <img src="image5.jpg" alt="Paper cover stack">
 </section>
 
@@ -84,6 +88,7 @@ footer{background:#1b5e20;color:#fff;text-align:center;padding:12px}
 </footer>
 </body>
 </html>
+
 
 
 
