--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ footer{background:#1b5e20;color:#fff;text-align:center;padding:12px}
 <div class="hero-text">
 <h2>High Quality Brown Paper Covers </h2>
 <h3>A sustainable solution to protect environment from plastic waste</h3>
-<p>Perfect packaging solutions for Textiles/Garments, Bakery, Snacks, Groceries, Vegetables and Medicines. </p>
-<p>Custom printing with your brand Name, Address, Logo available.</p>
-<p>We are a professional paper cover manufacturing unit providing high-quality,
+<p align=justify fontsize=14>Perfect packaging solutions for Textiles/Garments, Bakery, Snacks, Groceries, Vegetables and Medicines. </p>
+<p align=justify>Custom printing with your brand Name, Address, Logo available.</p>
+<p align=justify>We are a professional paper cover manufacturing unit providing high-quality,
    eco-friendly paper covers, as a replacement for plastic bags.</p>  
 
       
@@ -68,7 +68,7 @@ footer{background:#1b5e20;color:#fff;text-align:center;padding:12px}
 
 <p>Your logo & address printed neatly</p>
 <img src="paperroll1.jfif" alt="Dinining Rolls">
-<img src="paperrollsivambag.jfif" alt="Dinining Rolls">
+<img src="paperrollsivambag.jpg" alt="Dinining Rolls">
       
 <p>Dining table Paper rolls for wedding halls/Parties</p>
 
@@ -100,6 +100,7 @@ footer{background:#1b5e20;color:#fff;text-align:center;padding:12px}
 </footer>
 </body>
 </html>
+
 
 
 
