--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@ footer{background:#1b5e20;color:#fff;text-align:center;padding:12px}
 <img src="image1.png" alt="Multi purpose paper covers">
 <div class="hero-text">
 <h2>High Quality Brown Paper Covers </h2>
-<h3>A sustainable solution to protect environment from plastic waste</h3>
+<h3>We are a professional, eco-friendly paper cover manufacturing unit providing a 
+    sustainable solution to protect environment from plastic waste</h3>
 <h3>Perfect packaging solutions for Textiles/Garments, Bakery, Snacks, Groceries, Vegetables and Medicines. </h3>
-<p align=justify >Custom printing with your brand Name, Address, Logo available.</p>
-<p align=justify>We are a professional paper cover manufacturing unit providing high-quality,
-   eco-friendly paper covers, as a replacement for plastic bags.</p>  
-
-      
+<h3>Custom printing with your brand Name, Address, Logo available.</h3>
+     
 </div>
 </section>
 
@@ -100,6 +98,7 @@ footer{background:#1b5e20;color:#fff;text-align:center;padding:12px}
 </footer>
 </body>
 </html>
+
 
 
 
