--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SIVAM BAGS | Eco Friendly Paper Covers</title>
+<title>SIVAM BAGS | PAPER COVERS, DINING ROLLS</title>
 <style>
 body{margin:0;font-family:Arial,Helvetica,sans-serif;background:#f7f7f7;color:#333}
 header{background:#2e7d32;color:#fff;padding:20px;text-align:center}
@@ -102,6 +102,7 @@ footer{background:#1b5e20;color:#fff;text-align:center;padding:12px}
 </footer>
 </body>
 </html>
+
 
 
 
