--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ footer{background:#1b5e20;color:#fff;text-align:center;padding:12px}
 <h2>Contact Us</h2>
 <p><strong>GSTIN:</strong> 34DKZPR4550L1Z8</p>
 <p>A‑141, Industrial Growth Centre, PIPDIC, Polagam, T.R. Pattinam, Karaikal – 609606</p>
-<p>📞 Call / WhatsApp for bulk orders</p>
+<p>📞 9489670839, 9894740893 Call / WhatsApp for orders</p>
 </section>
 
 <footer>
@@ -102,6 +102,7 @@ footer{background:#1b5e20;color:#fff;text-align:center;padding:12px}
 </footer>
 </body>
 </html>
+
 
 
 
